Deployment/kubernetes/logging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: kube-logging
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect@kubernetescrd

spec:
  tls:
  - hosts:
    - logging.thinkmay.net
    secretName: secret-tls
  rules:
  - host: logging.thinkmay.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
